Player name input and deck shuffle.